practice/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemon-set-name
  labels:
    label-key1: label-value1
  annotations:
    annotation-key1: annotation-value1
spec:
  selector:
    matchLabels:
      label-key1: label-value1
    matchExpressions:
      - key: label-key1
        operator: In
        values:
          - label-value1
  template:
    metadata:
      name: pod-name
      labels:
        label-key1: label-value1
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
