practice/pod-nginx-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-label
  labels:
    team: finance
    version: 2.0.0
    env: production
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
