practice/pod-nodeselector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-nodeselector
spec:
  nodeSelector:
    gpu: "true"
    ssh: "true"
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
